--- a/style.css
+++ b/style.css
@@ -94,20 +94,21 @@ padding: 20px;
    margin-top: 200px;
    margin-left: 220px;
    color: white;
+   /* line-height: 50px; */
    /* font-family: 'Roboto', sans-serif; */
   
 
 }
 .we{
-    font-size: 16px;
+    font-size: 20px;
     margin-bottom: 30px;
 
 }
 .provide{
-    font-size: 46px;
+    font-size: 50px;
     font-weight: bold;
     margin-bottom: 30px;
-    width:600px; 
+    width:650px; 
     
 }
 .animation{
@@ -115,8 +116,9 @@ padding: 20px;
     margin-bottom: 30px;
 }
     .word-transition {
-        font-size: 60px;
-        animation: changeWord 9s infinite; /* 3 seconds per word, 3 words */
+        font-size: 70px;
+        font-weight: bold;
+        animation: changeWord 4s infinite; /* 3 seconds per word, 3 words */
       }
       
       @keyframes changeWord {
@@ -126,8 +128,8 @@ padding: 20px;
         66%, 88% { opacity: 1; }
       }
 .premium{
-    font-size: 22px;
-    width: 600px;
+    font-size: 26px;
+    width: 650px;
     margin-bottom: 30px;
 }
 .play{
@@ -152,16 +154,17 @@ padding: 20px;
 .rightpart{
     width: 50%;
     margin-top: 200px;
-    margin-left: 150px;
+    margin-left: 40px;
     
  
 }
 form{
-    width: 300px;
-    height: 400px;
+    width: 400px;
+    height: 450px;
     padding: 30px;
     background-color: white;
     font-family: 'Roboto', sans-serif;
+    border-radius: 10px
 }
 .detail{
     margin-bottom: 10px;
@@ -183,12 +186,12 @@ form{
 }
 .name{
     font-size: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     text-align: left
 }
 input{
-    padding: 14px 38px;
-    border-color: rgba(128, 128, 128, 0.13);
+    padding: 14px 78px;
+    border-color: rgba(128, 128, 128, 0.33);
    
 
 }
@@ -206,7 +209,7 @@ input{
 
 
 .sectionTwo{
-    height: 70vh;
+    height: 60vh;
     background-color: rgba(128, 128, 128, 0.293);
   
 
@@ -236,8 +239,11 @@ input{
     display: flex;
     flex-direction: column;
     align-items: center;
-    transition: 2s ease-in-out;
+    transition: 1s ease-in-out;
+    position: relative;
+    bottom: 60px;
 }
+
 .box1:hover{
     height: 250px;
     background-color: blue;
@@ -302,6 +308,7 @@ input{
      .img2 img{
          width: 700px;
          border-radius: 20px;
+         border: 1px solid black
      }
      .fourLeft{
          width: 50%;
@@ -319,9 +326,12 @@ input{
      .who{
          font-size: 20px;
          color: blue;
+         font-weight: bold;
      }
      .level{
-         font-size: 38px;
+         font-size: 48px;
+         font-weight: bold;
+         margin-top: 14px;
      }
   
      .next{
@@ -331,12 +341,17 @@ input{
    
         margin-top: 8px;
          color: gray;
-         font-size: 20px;
+         font-size: 26px;
      }
      .mission{
-         font-size: 20px;
-         margin-top: 10px;
+         font-size: 26px;
+       
+         margin-top: 16px;
          margin-left: 20px;
+     }
+     .mission li{
+         margin-bottom: 10px;
+         color: rgba(0, 0, 0, 0.721);
      }
      .below{
          margin-top: 10px;
@@ -348,14 +363,19 @@ input{
            margin-top: 10px;
      }
      .level1{
-        font-size: 30px;
+        font-size: 48px;
+    }
+    .img3 img{
+        width: 800px;
+        border-radius: 20px;
+        border: 1px solid black
     }
  .sectionsix{
      display: flex;
      flex-direction: column;
      align-items: center;
      width: 100%;
-     height: 800px;
+     height: 500px;
  }
  .images{
      display: flex;
@@ -364,6 +384,7 @@ input{
 .images img{
     margin: 20px;
     border: 1px solid black;
+    width: 300px;
 
  }
  .teams{
@@ -377,3 +398,218 @@ input{
      margin-top: 10px;
      font-size: rgba(0, 0, 0, 0.158);
  }
+ .sectionseven{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 1500px;
+ }
+ .brands{
+     display: flex;
+     margin-top: 30px;
+ }
+ .brands p{
+     margin-left: 25px;
+     font-size: 20px;
+     color: blue;
+ }
+ .card img{
+     border: 1px solid black;
+     margin-top: 50px;
+     height: 400px;
+     width: 400px;
+     border-radius: 10px;
+
+    
+
+ }
+ .btn{
+     margin-top: 10px;
+ }
+ .description{
+     font-size: 22px;
+     width: 80%;
+ }
+ .cardsecond, .cardfirst{
+     display: flex;
+ }
+ .sectioneight{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 800px;
+ }
+ .eightpart{
+     display: flex;
+     justify-content: space-around
+    
+ }
+ .eightleft{
+     width: 50%;
+     margin-top: 30px;
+ }
+ .eightright{
+width: 50%;
+margin-top: 30px;
+ }
+ .accordian{
+     width: 70%;
+     margin: auto
+ }
+ .accordian li{
+     list-style: none;
+     width: 100%;
+     margin: 20px;
+     padding: 2px;
+    
+     border-radius: 6px;
+     background: blue;
+     color: black;
+     /* box-shadow: 6px 6px 10px -1 rgba(0, 0, 0,0.15),
+     6px 6px 10px -1 rgba(255, 255, 255,0.7) */
+ }
+ 
+
+ .accordian li label{
+     display: flex;
+     align-items: center;
+     padding: 10px;
+     font-size: 24px;
+     font-weight: 500;
+     cursor: pointer;
+     color: white;
+ }
+ label::before{
+     content:  "+";
+     margin-right: 10px;
+     font-size: 24px;
+     font-weight: 600
+ }
+ input[type="checkbox"]{
+     display: none
+ }
+ .accordian .content{
+     background-color: white;
+     padding: 0 10px;
+     line-height: 26px ;
+     max-height: 0;
+     overflow: hidden;
+     transition: max-height 0.5s, padding 0.5s;
+ }
+ .accordian input[type = "checkbox"]:checked + label + .content{
+     max-height: 400px;
+     padding: 10px 10px 20px;
+
+ }
+ .accordian input[type = "checkbox"]:checked + label::before{
+     content: "-"
+ }
+ .para ,.para2{
+     font-size: 40px;
+     width: 80%;
+     margin-left: 20px;
+     margin-top: 10px;
+
+ }
+ .para2{
+     font-size: 24px;
+     color: rgba(0, 0, 0, 0.759);
+     line-height: 40px;
+ }
+ .sectionnine {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 800px;
+    justify-content: center;
+    /* color: white; */
+ }
+ .who1{
+     color: white;
+     margin-top: 20px;
+ }
+ .ninepart{
+     height: 300px;
+     width: 250px;
+     padding: 10px 40px;
+     background-color: white;
+     display: flex;
+     flex-direction: column;
+     margin-top: 50px;
+     border-radius: 40px;
+     margin: 20px;
+ }
+ .imgnine img{
+     border-radius: 150px;
+ }
+ .imgnine{
+     margin-top: 20px;
+     margin-right: 20px;
+ }
+ .ninepartt2{
+     display: flex;
+     justify-content: center;
+
+ }
+ .ninenew{
+     color: white
+ }
+
+ .quote{
+     font-size: 20px;
+ }
+ .client{
+     font-size: 18px;
+     margin-top: 30px;
+ }
+ .fafa
+ {
+     color: blue;
+     text-align: center;
+ }
+ .nine{
+     display: flex;
+     margin: 15px;
+ }
+ .sectionten{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 800px;
+    margin-top: 50px;
+}
+.cardnew{
+    height: 460px;
+    width: 350px;
+    margin: 30px;
+    border: 1px solid black;
+    border-radius: 20px;
+    background-color: rgba(128, 128, 128, 0.218)
+   
+}
+.tenimg{
+   
+}
+.tenimg img{
+    width:350px;
+    height: 200px;
+    border-radius: 20px;
+}
+.blog{
+    font-size: 22px;
+    font-weight: bolder;
+}
+.quote{
+    font-size: 20px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.cardcontainer{
+    display: flex;
+  
+}
